<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".TelaBluetooth">

    <!--        android:background="#77bfe9"-->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#3F0F0F"
        android:padding="10dp"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true">

            <ImageButton
                android:id="@+id/voltarbluetooth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_arrow_back_black_24dp" />

            <TextView
                android:id="@+id/bluu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/bluetooth"
                android:textColor="#fff"
                android:textSize="18sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/procurar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:text="@string/procurar"
            android:textColor="#FFF"
            android:textSize="18sp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#f4ecec">

        <Switch
            android:id="@+id/ativacao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="28dp"
            android:layout_marginRight="28dp" />

        <TextView
            android:id="@+id/statusativado"
            android:layout_width="93dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="35dp"
            android:layout_marginLeft="35dp"
            android:text="@string/ativado"
            android:textColor="#000" />

        <ProgressBar
            android:id="@+id/atualizando"
            style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"

            android:layout_centerVertical="true"
            android:layout_marginEnd="70dp"
            android:layout_marginRight="70dp"
            android:layout_marginBottom="0dp"
            android:visibility="invisible" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/campo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#fff"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/relativo"
            android:layout_width="match_parent"
            android:layout_height="37dp">

            <TextView
                android:id="@+id/statusConection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:paddingStart="15dp"
                android:paddingLeft="15dp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:background="#f4ecec">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="17dp"
                android:layout_marginLeft="17dp"
                android:layout_marginTop="0dp"
                android:text="@string/dispositivos_pareados" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/campoLista"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2">

            <ListView
                android:id="@+id/listadisppareados"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"

                android:layout_alignParentTop="true" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#f4ecec">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="17dp"
                android:layout_marginLeft="17dp"
                android:layout_marginTop="0dp"
                android:text="@string/dispositivos_dispon_veis" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/campoListanovos"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <ListView
                android:id="@+id/listadispnovos"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="0dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="0dp" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>